--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ baidu_analytics: 5b31ffbbdc6cff18727f3adf75a03777    #from //hm.baidu.com/hm.js?
 # Author information:
 author:
   #resume: /resume
-  name: Kim Dong Jun     #the name of Blog section
+  name: Dongjun     #the name of Blog section
   about_me: I'm DongJun Kim. This is my online home & blog, where I share thoughts about front-end development, cloud computing, my daily life and other insteresting topics. Feel free to contact me by email if you have any question.
  
 # Social Links
