--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,7 @@ baidu_analytics: 5b31ffbbdc6cff18727f3adf75a03777    #from //hm.baidu.com/hm.js?
 author:
   #resume: /resume
   name: DongJun     #the name of Blog section, 메인 Home에서 내리는 Blog Section
-  about_me: 김동준. \n
-  This is my online home & blog, where I share my thoughts, my daily life and other interesting topics. Feel free to contact me by email if you have any question.
+  about_me: 김동준. <br>This is my online home & blog, where I share my thoughts, my daily life and other interesting topics. Feel free to contact me by email if you have any question.
  
 # Social Links
 email:               kdjun97@gmail.com
