--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ github:              kdjun97
 #stackoverflow:      6438519/song-kong   #from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:           kongsong
 #xing:              username
-#instagram:          username
+instagram:          jumy_dong
 #lastfm:            username
 #tumblr:            username
 #pinterest:         username
